syntax = "proto3";
package agent;

option go_package = "github.com/recode-sh/agent/proto";

service Agent {
  rpc InitInstance (InitInstanceRequest) returns (stream InitInstanceReply) {}
  rpc BuildAndStartDevEnv (BuildAndStartDevEnvRequest) returns (stream BuildAndStartDevEnvReply) {}
}

message InitInstanceRequest {
  string dev_env_name_slug = 1;
  string github_user_email = 2;
  string user_full_name = 3;
}

message InitInstanceReply {
  string log_line_header = 1;
  string log_line = 2;
  optional string github_ssh_public_key_content = 3;
  optional string github_gpg_public_key_content = 4;
}

message BuildAndStartDevEnvRequest {
  string dev_env_repo_owner = 1;
  string dev_env_repo_name = 2;
  string user_config_repo_owner = 3;
  string user_config_repo_name = 4;
}

message BuildAndStartDevEnvReply {
  string log_line_header = 1;
  string log_line = 2;
}